made a carousel view  for report visualisation. Made a timer for method, so it is visible that the method is running. Fixed an errounus await remote start print, when the stop after current is pressed from gui.

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -40,6 +40,10 @@ QPushButton,
     line-height: 2;
 }
 
+#timeCounter{ 
+    text-align: center;
+}
+
 /* The tooltip and progress bar color - meant to create a contrast */
 QComboBox QAbstractItemView {
     background-color: PLACEHOLDER_BACKGROUND_COLOR;
